styles/style.sass
// 1. Import the initial variables
@import 'bulma/sass/utilities/initial-variables'
@import 'bulma/sass/utilities/mixins'

$card-shadow: 0 2px 3px rgba($black, 0.1), 0 0 2px 1px rgba($black, 0.1) !default

// Prevent images with float: from overflowing posts.
.card:after 
  content: ""
  clear: both
  display: block

// General format helpers
.margin-2 
  margin: 2px

.push-12 
  margin-top: 12px

// Cards
.card-shadow 
  box-shadow: $card-shadow

// Columns have an additional right margin by default
.columns
  margin-right: 0 !important

// Icon format
.mdi-icon
  fill: currentColor
  width: 1.2em
  height: 1.2em

.mdi-icon-spacer
  margin-right: 2px

.mdi-icon-medium
  width: 2.1em
  height: 2.1em

.mdi-icon-large
  width: 3em
  height: 3em

.mdi-icon-titanic
  width: 7em
  height: 7em

// Editor format elements
.sidebar
  @media (min-width: $tablet)
    position: fixed
    margin-right: 1.5rem

.jodit_container
  background: unset !important
  font-size: unset !important
  font-family: unset !important

.jodit_toolbar
  border-radius: 4px 4px 0 0 !important

.jodit_statusbar
  border-radius: 0 0 4px 4px !important

.jodit_filebrowser_files.active.jodit_filebrowser_files_view-list a img
  height: 16px !important

// Notification overlay
#overlay
  position: fixed
  z-index: 200
  top: 0
  padding-top: 3px
  padding-right: 3px
  left: 70%
  width: 30%
  +mobile
    left: 20%
    width: 80%

.overlay-notification-progress
  position: absolute !important
  left: 0 !important
  right: 0 !important
  bottom: 0 !important
  border-radius: 4px !important

// Adds a border to images added by the user.
.user-content img
  margin: 5px
  box-shadow: $card-shadow

@keyframes pop-in
  0%
    opacity: 0
    transform: scale(0.5)
  100%
    opacity: 1
    transform: scale(1)
.pop-in
  animation: pop-in 0.2s

// 3. Import the rest of Bulma;
@import 'bulma/bulma'

